@@ -28,6 +28,8 @@ Changes since the uhexen2-1.5.1 release:
 * All platforms, OpenGL: Added anisotropic texture filtering
   support (gl_texture_anisotropy). Revised existing texture
   filters. Texture filtering options now saved to the config.
+* All platforms, OpenGL: Added support for non-power-of-two-
+  textures extension.
 * All platforms: Implemented fov in opengl hexen2, useful
   for widescreen resolutions. Revised the implementations
   in hexenworld, as well as the software renderer.
